example/error/classduplicate.m
class classname
  int a = 0
end
class classname
  int a = 0
end